# cpuminer-opt2

./: Makefile.am  build-linux-gpu.sh  build-windows-all.bat  build-windows-cpu.bat  build-windows-gpu.bat  build-windows-stage2-cpu.sh  build-windows-stage2-gpu.sh  build-windows-stage2.sh  configure.ac  cpu-miner.c  miner.h
algo/argon2d/: argon2d-gate.c  argon2d-gate.h  argon2d-gpu-gate.cpp  argon2d-gpu-gate.h
algo/argon2d/argon2-gpu/: CMakeLists.txt
algo/argon2d/argon2-gpu/data/kernels/: argon2_kernel.cl
algo/argon2d/argon2-gpu/lib/argon2-opencl/: globalcontext.cpp
